added helm configmap ingress with cluster as inputs

--- a/modules/helm/k8s/0.1/facets.yaml
+++ b/modules/helm/k8s/0.1/facets.yaml
@@ -10,7 +10,7 @@ clouds:
 inputs:
   prometheus_details:
     type: '@outputs/prometheus'
-    optional: false
+    optional: true
     default:
       resource_type: configuration
       resource_name: prometheus
