--- a/modules/network/azure_vpc/0.1/facets.yaml
+++ b/modules/network/azure_vpc/0.1/facets.yaml
@@ -16,7 +16,8 @@ spec:
     choose_vpc_type:
       title: Choose VPC Type
       description: Choose the type of VPC
-      type: radio
+      type: string
+      x-ui-type: radio
       x-ui-immutable: true
       x-ui-overrides-only: true
       enum: [{label: Create New VPC, value: create_new_vpc}, {label: Use Existing
