Update facets.yaml to specify output type as '@outputs/gcp_cloud_account' and modify main.tf to utilize data source for service account name in IAM member resource, enhancing clarity and functionality in Google Cloud account impersonation.

--- a/modules/cloud_account/impersonate/1.0/facets.yaml
+++ b/modules/cloud_account/impersonate/1.0/facets.yaml
@@ -73,7 +73,7 @@ spec:
   - region
 outputs:
   default:
-    type: '@outputs/cloud_account'
+    type: '@outputs/gcp_cloud_account'
     providers:
       google-beta:
         source: hashicorp/google-beta
