Update facets.yaml to change output type to '@outputs/cloud_account' for consistency, and modify main.tf to add a blank line for improved readability in the Google Cloud account impersonation module.

--- a/modules/cloud_account/impersonate/1.0/facets.yaml
+++ b/modules/cloud_account/impersonate/1.0/facets.yaml
@@ -73,7 +73,7 @@ spec:
   - region
 outputs:
   default:
-    type: '@outputs/gcp_cloud_account'
+    type: '@outputs/cloud_account'
     providers:
       google-beta:
         source: hashicorp/google-beta
