--- a/modules/prometheus/k8s/0.1/facets.yaml
+++ b/modules/prometheus/k8s/0.1/facets.yaml
@@ -20,25 +20,19 @@ spec:
   title: Prometheus Stack
   type: object
   properties:
-    metadata:
-        type: object
-        title: Metadata
-        description: Metadata for the Prometheus stack
-        properties:
-            namespace:
-              type: string
-              title: Namespace
-              description: Kubernetes namespace for the Prometheus stack
-              default: "default"
-              pattern: "^[a-z0-9]([-a-z0-9]*[a-z0-9])?$"
-              x-ui-placeholder: "e.g., monitoring, prometheus, default"
+    namespace:
+      type: string
+      title: Namespace
+      description: Kubernetes namespace for the Prometheus stack
+      default: "default"
+      pattern: "^[a-z0-9]([-a-z0-9]*[a-z0-9])?$"
+      x-ui-placeholder: "e.g., monitoring, prometheus, default"
     values:
       type: object
       title: Custom Values
       description: Additional values to pass to the Prometheus helm chart in YAML format
       default: "{}"
       x-ui-yaml-editor: true
-
     node_selector:
       type: object
       title: Node Selector
@@ -331,7 +325,7 @@ spec:
                       pattern: "^([1-9]|[1-5][0-9]|6[0-4])Gi$|^([1-9]|[1-9][0-9]{1,3}|[1-5][0-9]{4}|6[0-3][0-9]{3}|64000)Mi$"
                       default: "512Mi"
   x-ui-order:
-    - metadata
+    - namespace
     - operator
     - enable_crds
     - prometheus
