Sample fixes and other fixes

--- a/modules/google_workload_identity/default/1.0/facets.yaml
+++ b/modules/google_workload_identity/default/1.0/facets.yaml
@@ -107,7 +107,7 @@ spec:
       patternProperties:
         "^[a-zA-Z0-9_]+$":
           title: Role Key
-          type: string
+          type: object
           description: Role Object which contains the role to be assigned to the service
             account.
           properties:
