--- a/modules/ingress/aws_ecs_alb/0.1/facets.yaml
+++ b/modules/ingress/aws_ecs_alb/0.1/facets.yaml
@@ -236,6 +236,6 @@ sample:
     rules:
       rule1:
         ecs_service_arn: ${ecs_service.myservice.out.attributes.ecs_service_arn}
-        port: 80
+        port: '80'
         priority: 1
         path: "/"
