--- a/modules/log_collector/loki_standalone_k8s/0.1/facets.yaml
+++ b/modules/log_collector/loki_standalone_k8s/0.1/facets.yaml
@@ -175,6 +175,7 @@ sample:
         timeout: 700
         wait: true
         values: {}
+        recreate_pods: false
     minio:
       replicas: 2
       volume: 10Gi
