--- a/modules/sns/default/0.1/facets.yaml
+++ b/modules/sns/default/0.1/facets.yaml
@@ -86,6 +86,6 @@ sample:
   spec:
     subscriptions:
       sqs:
-        protocol: ""
+        protocol: "sqs"
         endpoint: ""
   disabled: false
