--- a/modules/ingress/aws_alb/0.1/facets.yaml
+++ b/modules/ingress/aws_alb/0.1/facets.yaml
@@ -22,7 +22,7 @@ sample:
       grafana1:
         service_name: prometheus-operator-grafana
         path: /
-        port: 80
+        port: '80'
         domain_prefix: grafana1
         annotations:
           app: ''
