--- a/modules/ecs_service/default/0.1/facets.yaml
+++ b/modules/ecs_service/default/0.1/facets.yaml
@@ -82,7 +82,7 @@ spec:
           x-ui-override-disable: true
           description: Command-line arguments for the container
           patternProperties:
-            "^[a-zA-Z0-9_-]+$":
+            "^[a-zA-Z0-9_\\-]+$":
               type: object
               title: Argument Name
               description: Define command-line arguments for the container
@@ -105,7 +105,7 @@ spec:
       description: Map of environment variables passed to the container.
       type: object
       patternProperties:
-        "^[a-zA-Z][a-zA-Z0-9_-.]*$":
+        "^[a-zA-Z][a-zA-Z0-9_\\-\\.]*$":
           title: Environment Variable
           description: Environment Variable
           type: string
@@ -129,6 +129,8 @@ sample:
         cpu: 512
         memory: 1
       readonly_root_filesystem: true
+    release:
+      image: "nginx:latest"
     env:
       APP_ENV: "production"
       LOG_LEVEL: "info"
