--- a/modules/ecs_service/default/0.1/facets.yaml
+++ b/modules/ecs_service/default/0.1/facets.yaml
@@ -105,10 +105,17 @@ spec:
       description: Map of environment variables passed to the container.
       type: object
       patternProperties:
-        "^[a-zA-Z][a-zA-Z0-9_\\-\\.]*$":
+        "^[a-zA-Z][a-zA-Z0-9_]*$":
+          type: object
           title: Environment Variable
-          description: Environment Variable
-          type: string
+          description: Define environment variable for the container
+          properties:
+            value:
+              type: string
+              title: Value
+              description: Environment variable value
+          required:
+          - value
       x-ui-yaml-editor: true
   required:
   - runtime
@@ -132,5 +139,7 @@ sample:
     release:
       image: "nginx:latest"
     env:
-      APP_ENV: "production"
-      LOG_LEVEL: "info"
+      APP_ENV:
+        value: "production"
+      LOG_LEVEL:
+        value: "info"
