--- a/modules/network/gcp_vpc/0.1/facets.yaml
+++ b/modules/network/gcp_vpc/0.1/facets.yaml
@@ -16,11 +16,17 @@ spec:
     choose_vpc_type:
       title: Choose VPC Type
       description: Choose the type of VPC
-      type: radio
+      type: string
       x-ui-immutable: true
       x-ui-overrides-only: true
-      enum: [{label: Create New VPC, value: create_new_vpc}, {label: Use Existing
-            VPC, value: use_existing_vpc}, {label: Shared VPC, value: shared_vpc}]
+      enum: 
+        - create_new_vpc
+        - use_existing_vpc
+        - shared_vpc
+      x-ui-enum-labels:
+        - Create New VPC
+        - Use Existing VPC
+        - Shared VPC
       default: create_new_vpc
     azs:
       title: Availability Zones
@@ -29,6 +35,7 @@ spec:
       x-ui-placeholder: e.g. asia-southeast1-a asia-southeast1-b
       x-ui-immutable: true
       x-ui-overrides-only: true
+      x-ui-override-disable: true
       x-ui-fetch-az: true
       items:
         type: string
@@ -36,8 +43,7 @@ spec:
       title: VPC CIDR
       description: CIDR block for the vpc
       x-ui-placeholder: e.g. 10.45.0.0/16
-      pattern: 
-        ^(10\.(\d{1,3}\.){2}\d{1,3}\/(2[0-8]|[89]|1[0-9])|172\.(1[6-9]|2[0-9]|3[01])\.(\d{1,3}\.){1}\d{1,3}\/(2[0-8]|[12][0-9])|192\.168\.(\d{1,3}\.){1}\d{1,3}\/(2[0-8]|[12][0-9]|1[6-9]))$
+      pattern: '^(10\.(\\d{1,3}\\.){2}\\d{1,3}\\/(2[0-8]|[89]|1[0-9])|172\\.(1[6-9]|2[0-9]|3[01])\\.(\\d{1,3}\\.){1}\\d{1,3}\\/(2[0-8]|[12][0-9])|192\\.168\\.(\\d{1,3}\\.){1}\\d{1,3}\\/(2[0-8]|[12][0-9]|1[6-9]))$'
       x-ui-error-message: The provided CIDR block is invalid. Please ensure it is
         a valid private IP range in CIDR notation
       type: string
@@ -75,8 +81,7 @@ spec:
       description: Name of the secondary range for pods in the host project's VPC
       type: string
       x-ui-placeholder: e.g. 10.45.0.0/16
-      pattern: 
-        ^(10\.(\d{1,3}\.){2}\d{1,3}\/(2[0-8]|[89]|1[0-9])|172\.(1[6-9]|2[0-9]|3[01])\.(\d{1,3}\.){1}\d{1,3}\/(2[0-8]|[12][0-9])|192\.168\.(\d{1,3}\.){1}\d{1,3}\/(2[0-8]|[12][0-9]|1[6-9]))$
+      pattern: '^(10\\.(\\d{1,3}\\.){2}\\d{1,3}\\/(2[0-8]|[89]|1[0-9])|172\\.(1[6-9]|2[0-9]|3[01])\\.(\\d{1,3}\\.){1}\\d{1,3}\\/(2[0-8]|[12][0-9])|192\\.168\\.(\\d{1,3}\\.){1}\\d{1,3}\\/(2[0-8]|[12][0-9]|1[6-9]))$'
       x-ui-error-message: The provided CIDR block is invalid. Please ensure it is
         a valid private IP range in CIDR notation
       x-ui-immutable: true
@@ -100,8 +105,7 @@ spec:
         VPC
       type: string
       x-ui-placeholder: e.g. 10.45.0.0/16
-      pattern: 
-        ^(10\.(\d{1,3}\.){2}\d{1,3}\/(2[0-8]|[89]|1[0-9])|172\.(1[6-9]|2[0-9]|3[01])\.(\d{1,3}\.){1}\d{1,3}\/(2[0-8]|[12][0-9])|192\.168\.(\d{1,3}\.){1}\d{1,3}\/(2[0-8]|[12][0-9]|1[6-9]))$
+      pattern: '^(10\\.(\\d{1,3}\\.){2}\\d{1,3}\\/(2[0-8]|[89]|1[0-9])|172\\.(1[6-9]|2[0-9]|3[01])\\.(\\d{1,3}\\.){1}\\d{1,3}\\/(2[0-8]|[12][0-9])|192\\.168\\.(\\d{1,3}\\.){1}\\d{1,3}\\/(2[0-8]|[12][0-9]|1[6-9]))$'
       x-ui-error-message: The provided CIDR block is invalid. Please ensure it is
         a valid private IP range in CIDR notation
       x-ui-immutable: true
@@ -141,8 +145,7 @@ spec:
       description: CIDR block for the host project's subnet IP range
       type: string
       x-ui-placeholder: e.g.10.45.0.0/16
-      pattern: 
-        ^(10\.(\d{1,3}\.){2}\d{1,3}\/(2[0-8]|[89]|1[0-9])|172\.(1[6-9]|2[0-9]|3[01])\.(\d{1,3}\.){1}\d{1,3}\/(2[0-8]|[12][0-9])|192\.168\.(\d{1,3}\.){1}\d{1,3}\/(2[0-8]|[12][0-9]|1[6-9]))$
+      pattern: '^(10\\.(\\d{1,3}\\.){2}\\d{1,3}\\/(2[0-8]|[89]|1[0-9])|172\\.(1[6-9]|2[0-9]|3[01])\\.(\\d{1,3}\\.){1}\\d{1,3}\\/(2[0-8]|[12][0-9])|192\\.168\\.(\\d{1,3}\\.){1}\\d{1,3}\\/(2[0-8]|[12][0-9]|1[6-9]))$'
       x-ui-error-message: The provided CIDR block is invalid. Please ensure it is
         a valid private IP range in CIDR notation
       x-ui-immutable: true
@@ -187,11 +190,6 @@ spec:
       x-ui-visible-if:
         field: spec.choose_vpc_type
         values: ["shared_vpc"]
-  required: [vnet_name, host_project_id, host_project_pods_secondary_range_name, host_project_pods_secondary_ip_range,
-    host_project_services_secondary_range_name, host_project_services_secondary_ip_range,
-    host_project_allocatable_ip_range, host_project_subnet_id, host_project_subnet_name,
-    host_project_subnet_ip_range, host_project_vpc_id, host_project_vpc_name, host_project_google_service_id,
-    host_project_google_service_name, azs, vpc_cidr]
   x-ui-order: [choose_vpc_type, vnet_name, host_project_id, host_project_pods_secondary_range_name,
     host_project_pods_secondary_ip_range, host_project_services_secondary_range_name,
     host_project_services_secondary_ip_range, host_project_allocatable_ip_range, host_project_subnet_id,
@@ -205,4 +203,5 @@ sample:
   disabled: true
   depends_on: []
   metadata: {}
-  spec: {}
+  spec:
+    vnet_name: "my-existing-vpc"
