--- a/modules/network/azure_vpc/0.1/facets.yaml
+++ b/modules/network/azure_vpc/0.1/facets.yaml
@@ -16,11 +16,15 @@ spec:
     choose_vpc_type:
       title: Choose VPC Type
       description: Choose the type of VPC
-      type: radio
+      type: string
       x-ui-immutable: true
       x-ui-overrides-only: true
-      enum: [{label: Create New VPC, value: create_new_vpc}, {label: Use Existing
-            VPC, value: use_existing_vpc}]
+      enum: 
+        - create_new_vpc
+        - use_existing_vpc
+      x-ui-enum-labels:
+        - Create New VPC
+        - Use Existing VPC
       default: create_new_vpc
     azs:
       title: Availability Zones
@@ -29,6 +33,7 @@ spec:
       x-ui-placeholder: e.g. 1 2
       x-ui-immutable: true
       x-ui-overrides-only: true
+      x-ui-override-disable: true
       x-ui-fetch-az: true
       items:
         type: string
@@ -36,8 +41,7 @@ spec:
       title: VPC CIDR
       description: CIDR block for the vpc
       x-ui-placeholder: e.g. 10.45.0.0/16
-      pattern: 
-        ^(?!10\.0\.0\.0\/16$)(10\.(\d{1,3}\.){2}\d{1,3}\/(2[0-8]|[89]|1[0-9])|172\.(1[6-9]|2[0-9]|3[01])\.(\d{1,3}\.){1}\d{1,3}\/(2[0-8]|[12][0-9])|192\.168\.(\d{1,3}\.){1}\d{1,3}\/(2[0-8]|[12][0-9]|1[6-9]))$
+      pattern: '^(?!10\\.0\\.0\\.0\\/16$)(10\\.(\\d{1,3}\\.){2}\\d{1,3}\\/(2[0-8]|[89]|1[0-9])|172\\.(1[6-9]|2[0-9]|3[01])\\.(\\d{1,3}\\.){1}\\d{1,3}\\/(2[0-8]|[12][0-9])|192\\.168\\.(\\d{1,3}\\.){1}\\d{1,3}\\/(2[0-8]|[12][0-9]|1[6-9]))$'
       x-ui-error-message: "The provided CIDR block is invalid. Ensure it is a valid
         private IP range in CIDR notation and note that the CIDR block 10.0.0.0/16
         is not allowed."
@@ -62,7 +66,6 @@ spec:
         values: [use_existing_vpc]
       x-ui-immutable: true
       x-ui-overrides-only: true
-  required: [azs, vpc_cidr, vnet_name, resource_group_name]
   x-ui-order: [choose_vpc_type, vnet_name, resource_group_name, azs, vpc_cidr]
 sample:
   kind: network
@@ -72,4 +75,5 @@ sample:
   disabled: true
   depends_on: []
   metadata: {}
-  spec: {}
+  spec:
+    azs: ["1", "2"]
